@@ -1332,6 +1332,7 @@ module = {
   name = zfs;
   common = fs/zfs/zfs.c;
   common = fs/zfs/zfs_lzjb.c;
+  common = fs/zfs/zfs_lz4.c;
   common = fs/zfs/zfs_sha256.c;
   common = fs/zfs/zfs_fletcher.c;
 };
