@@ -88,6 +88,7 @@ enum zio_compress {
 	ZIO_COMPRESS_GZIP8,
 	ZIO_COMPRESS_GZIP9,
 	ZIO_COMPRESS_ZLE,
+	ZIO_COMPRESS_LZ4,
 	ZIO_COMPRESS_FUNCTIONS
 };
 
